--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Drag N Drop</title>
+    <title>The Heavy- How you like me now?</title>
     <link rel="stylesheet" href="./app.css" />
 	<link rel="stylesheet" href="./nes.css" />
   </head>
