--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <! –– audio control is sticky ––>
   <body>
   <div class="header" id="myHeader" style="text-align:center">
-  <audio controls>
+  <audio id="player" controls>
   <source src="how you like me now.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
   </audio>
